--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#DATA BASE (h2)
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
 
+#SERVER PORT
+server.port = 8080
