--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #DATA BASE (h2)
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.url=jdbc:h2:mem:instagramplusdb
+spring.datasource.username=admin
+spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
