--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:h2:mem:instagramplusdb
 spring.datasource.username=admin
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.h2.console.enabled=true
 
 #SERVER PORT
