--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -51,7 +51,14 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
