--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#DATA BASE (h2)
+## DATA BASE (h2)
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:instagramplusdb
 spring.datasource.username=admin
@@ -7,5 +7,15 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.show-sql=false
 spring.h2.console.enabled=true
 
-#SERVER PORT
+## SERVER PORT
 server.port = 8080
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
