front end update

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+#TLS
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=tls/keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=server_keys
