--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.show-sql=false
 spring.h2.console.enabled=true
 
+app.db-init=true
+
 ## SERVER PORT
 server.port = 8080
 
