https out, auth aout, feed add, bug fixs

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
 #TLS
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=tls/keystore.p12
-server.ssl.key-store-password=password
-server.ssl.key-alias=server_keys
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=tls/keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=server_keys
