--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.servlet.multipart.max-request-size=215MB
 #server.ssl.key-store=tls/keystore.p12
 #server.ssl.key-store-password=password
 #server.ssl.key-alias=server_keys
+
+#Authentication
+userAuth=false
